--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,12 @@
   "extends": "@salesforce/dev-config/tsconfig-strict",
   "compilerOptions": {
     "outDir": "lib",
-    "module": "ES2020",
-    "lib": ["es2020", "dom"],
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
     "incremental": true,
-    "tsBuildInfoFile": ".tsbuildinfo"
+    "module": "node16",
+    "moduleResolution": "node16",
+    "lib": ["es2021", "dom"],
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
   },
   "ts-node": {
     "esm": true
