--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "@salesforce/sf-plugins-core": "^3.1.12",
     "@salesforce/source-deploy-retrieve": "^9.5.0",
     "@salesforce/ts-types": "^2.0.5",
+    "cli-truncate": "^3.1.0",
     "debug": "^4.3.4",
     "enquirer": "^2.4.0",
     "fs-extra": "^11.1.1",
     "is-docker": "^3.0.0",
     "is-wsl": "^2.2.0",
     "listr2": "^6.6.0",
+    "log-update": "^5.0.1",
     "playwright-chromium": "^1.36.1",
     "tabletojson": "^2.0.7",
-    "tslib": "^2.6.1"
+    "tslib": "^2.6.1",
+    "wrap-ansi": "^8.1.0"
   },
   "devDependencies": {
     "@oclif/plugin-command-snapshot": "^4.0.9",
