--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "bugs": "https://github.com/jayree/sfdx-plugin-org/issues",
   "dependencies": {
     "@jayree/changelog": "^1.1.7",
+    "@listr2/prompt-adapter-enquirer": "^1.0.1",
     "@oclif/core": "^3.0.9",
     "@salesforce/sf-plugins-core": "^4.0.0",
     "@salesforce/source-deploy-retrieve": "^9.7.24",
