--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
         "releaseNotesPath": "https://github.com/jayree/sfdx-plugin-org/tree/main",
         "releaseNotesFilename": "CHANGELOG.md"
       }
-    }
+    },
+    "topicSeparator": " "
   },
   "repository": "jayree/sfdx-plugin-org",
   "scripts": {
