--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "@jayree/changelog": "^1.1.10",
     "@listr2/prompt-adapter-enquirer": "^2.0.2",
     "@oclif/core": "^3.20.0",
+    "@salesforce/core": "^6.7.0",
     "@salesforce/sf-plugins-core": "^7.1.14",
     "@salesforce/source-deploy-retrieve": "^10.5.1",
     "@salesforce/ts-types": "^2.0.9",
+    "chalk": "^5.3.0",
     "cli-truncate": "^4.0.0",
     "debug": "^4.3.4",
     "enquirer": "^2.4.1",
     "fs-extra": "^11.2.0",
     "is-docker": "^3.0.0",
     "is-wsl": "^3.1.0",
+    "jsforce": "^2.0.0-beta.29",
     "listr2": "^8.0.2",
     "log-update": "^6.0.0",
     "playwright-chromium": "^1.42.1",
