--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@salesforce/source-deploy-retrieve": "^12.1.7",
     "@salesforce/ts-types": "^2.0.10",
     "chalk": "^5.3.0",
+    "cli-progress": "^3.12.0",
     "cli-truncate": "^4.0.0",
     "debug": "^4.3.5",
     "enquirer": "^2.4.1",
@@ -33,6 +34,7 @@
     "@oclif/plugin-help": "^6.2.6",
     "@salesforce/dev-scripts": "^9.1.2",
     "@salesforce/ts-sinon": "^1.4.22",
+    "@types/cli-progress": "^3.11.6",
     "@types/debug": "^4.1.12",
     "@types/fs-extra": "^11.0.4",
     "@types/wrap-ansi": "^8.1.0",
